nav link onClick setTime out added to ensure the scroll to top (test), header box-shadow added to improve visibility, stories-grid__item hover effect added

--- a/photosnap/src/styles/components/_stories-grid.scss
+++ b/photosnap/src/styles/components/_stories-grid.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: minmax(500px, auto);
+  overflow: hidden;
   // min-height: 500px;
 
   @include bp.respond-to(tablet) {
@@ -19,7 +20,13 @@
 
   &__item {
     position: relative;
+    top: 0;
     height: 100%;
+    transition: top var.$transition;
+
+    &:hover {
+      top: -24px;
+    }
   }
 
   &__bg-image {
@@ -81,5 +88,14 @@
       margin-top: 20px;
       justify-content: space-between;
     }
+  }
+
+  &__border-btm {
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    height: 6px;
+    width: 100%;
+    background: var.$gradient;
   }
 }
