--- a/photosnap/src/styles/layout/_header.scss
+++ b/photosnap/src/styles/layout/_header.scss
@@ -7,6 +7,7 @@
   height: var.$header-height;
   padding-inline: 40px;
   background-color: var.$color-white;
+  box-shadow: 0 2px 4px rgba(var.$color-black, 0.1);
   z-index: 50;
 
   @include  bp.respond-to(tablet) {
